[gd_scene load_steps=17 format=3 uid="uid://4xkgb6wyhpkb"]

[ext_resource type="Script" path="res://scenes/building.gd" id="1_no7ks"]
[ext_resource type="PackedScene" uid="uid://bdlhljeuhdyc0" path="res://models/comedy_club.glb" id="1_xfk75"]
[ext_resource type="PackedScene" uid="uid://bbyus2y643rp0" path="res://models/bar.glb" id="2_5gooh"]
[ext_resource type="PackedScene" uid="uid://de25e4whii3qa" path="res://scenes/guest.tscn" id="2_idpge"]
[ext_resource type="PackedScene" uid="uid://c4fuk2e1l2kf1" path="res://models/stage.glb" id="3_lcvpm"]
[ext_resource type="PackedScene" uid="uid://b54hgw30ohhce" path="res://scenes/comedian.tscn" id="4_xt4gv"]
[ext_resource type="Script" path="res://scenes/SpotLight.gd" id="7_fetvf"]
[ext_resource type="PackedScene" uid="uid://xw4q52xtmcl5" path="res://scenes/laptop.tscn" id="8_6tjwg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dldv6"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ch7u4"]
sky_material = SubResource("ProceduralSkyMaterial_dldv6")

[sub_resource type="Environment" id="Environment_nsomo"]
background_mode = 2
sky = SubResource("Sky_ch7u4")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_321s7"]
size = Vector3(30, 1, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_4hxpl"]
size = Vector3(40.096, 1.3125, 40.278)

[sub_resource type="Animation" id="Animation_8evor"]
resource_name = "comedian_routine"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Comedian:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4, 7, 8, 11, 12, 15, 16, 17, 18),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-4.18282, 1.07653, -14.282), Vector3(-4.18282, 1.07653, -14.282), Vector3(-0.0526814, 1.07653, -15.7165), Vector3(-0.0526814, 1.07653, -15.7165), Vector3(5.30014, 1.07653, -13.9543), Vector3(5.30014, 1.07653, -13.9543), Vector3(1.88684, 1.07653, -16.0929), Vector3(1.88684, 1.07653, -16.0929), Vector3(-1.67542, 1.07653, -13.7335), Vector3(-1.67542, 1.07653, -13.7335), Vector3(0.260705, 1.07653, -13.7335), Vector3(0.260705, 1.07653, -13.7335)]
}

[sub_resource type="Animation" id="Animation_egt2o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Comedian:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-3.18501, 1.07653, -14.677)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anrt1"]
_data = {
"RESET": SubResource("Animation_egt2o"),
"comedian_routine": SubResource("Animation_8evor")
}

[node name="Building" type="Node3D"]
script = ExtResource("1_no7ks")
GuestScene = ExtResource("2_idpge")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_nsomo")

[node name="comedy_club" parent="." instance=ExtResource("1_xfk75")]

[node name="FloorArea" type="Area3D" parent="comedy_club"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.41723, 0, 3.68695)

[node name="CollisionShape3D" type="CollisionShape3D" parent="comedy_club/FloorArea"]
shape = SubResource("BoxShape3D_321s7")

[node name="bar" parent="." instance=ExtResource("2_5gooh")]

[node name="stage" parent="." instance=ExtResource("3_lcvpm")]

[node name="Comedian" parent="." instance=ExtResource("4_xt4gv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.18501, 1.07653, -14.677)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.806021, 0.591887, 0, -0.591887, 0.806021, 5.1544, 11.6362, 14.2404)
current = true
fov = 77.3

[node name="AudioListener3D" type="AudioListener3D" parent="Camera3D"]
current = true

[node name="SpotLight" type="SpotLight3D" parent="." node_paths=PackedStringArray("Target")]
transform = Transform3D(0.60042, -0.299567, 0.741455, 0, 0.927184, 0.374607, -0.799685, -0.224921, 0.5567, 18.2379, 12.911, 0)
light_energy = 20.0
shadow_enabled = true
spot_range = 44.2914
spot_angle = 10.0
script = ExtResource("7_fetvf")
Target = NodePath("../Comedian")

[node name="SpotLight2" type="SpotLight3D" parent="." node_paths=PackedStringArray("Target")]
transform = Transform3D(0.692143, 0.270376, -0.669204, 0, 0.927184, 0.374607, 0.72176, -0.259281, 0.641744, -18.1877, 12.911, 0)
light_energy = 20.0
shadow_enabled = true
spot_range = 44.2914
spot_angle = 10.0
script = ExtResource("7_fetvf")
Target = NodePath("../Comedian")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.694342, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_4hxpl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_anrt1")
}
autoplay = "comedian_routine"

[node name="Laptop" parent="." instance=ExtResource("8_6tjwg")]
transform = Transform3D(0.788043, 0, -0.61562, 0, 1, 0, 0.61562, 0, 0.788043, -14.392, 2.7058, 2.72985)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
